<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My Nation</string>
    <string name="action_settings">Settings</string>
    <string name="menu_en">English</string>
    <string name="menu_ta">தமிழ்</string>
    <string name="menu_so">Sourastra</string>
    <string name="edit_message">Enter text here</string>
    <string name="button_send">Send</string>
    <string name="button_next">Next</string>
    <string name="button_previous">Previous</string>
    <string name="title_activity_display_message">Home</string>
    <string name="title_leaders">Leaders</string>
    <string name="title_songs">Songs</string>
    <string name="title_symbols">Symbols</string>
    <!-- string name="hello_world">My Nation!</string-->
    <string name="action_search">Next</string>
    
</resources>
