<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <!-- Search, should appear as action button -->
    <item
        android:id="@+id/action_search"
          android:icon="@drawable/abc_ic_search"
          android:title="@string/action_search"
          android:showAsAction="ifRoom" />
    <!-- Settings, should always be in the overflow -->
    <!-- item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/ -->
    <item
        android:id="@+id/menu_en"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_en"/>
    <item
        android:id="@+id/menu_ta"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_ta"/>

</menu>
