<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
      android:id="@+id/image"
      android:layout_width="match_parent"
      android:layout_height="0dp" 
      android:layout_weight="1"
      android:layout_margin="3dip"
      android:contentDescription="@string/app_name"
      android:src="@drawable/ic_launcher"
      android:scaleType="fitXY"/>
    
    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:text="@string/app_name" />
    
    <LinearLayout android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_width="match_parent">
    
    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/button_previous"
        android:onClick="loadPrevious" />
    
    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/button_next"
        android:onClick="loadNext" />
    
    </LinearLayout>

</LinearLayout>
